Adding Loading message while loading picture When loading from Flickr stream, it acts a little quirky but runs without any exceptions or errors.